# Investments-MCP

./: .gitignore  README.md  config.example.yaml  investments-mcp.service  pyproject.toml
investments_mcp/: __init__.py  config.py  eodhd_client.py  exchanges.py  prices.py  server.py  trade_ops.py  vault.py
